Fix overflow issue in styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ html{
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden; /*idk*/
 }
 
 body{
